[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerapp"
version = "0.1.0"
description = "A simple addition example"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"

[tool.setuptools]
py-modules = ["addition"]
